<resources>
    <string name="app_name">Health Guardian</string>
    <!--    layout intro-->
    <string name="first_text" translatable="false">Find Nearest Doctor</string>
    <string name="second_text" translatable="false">Get Doorstep Medicine</string>
    <string name="third_text" translatable="false">24X7 Boat Service</string>
    <string name="txt_skip" translatable="false">Skip</string>
    <string name="txt_get_start" translatable="false">Get Start</string>
    <string name="Details" translatable="false">User_Details</string>
    <!-- activity sign in -->
    <string name="dont_have_account"> Don\'t have an account?</string>
    <string name="have_account"> Already have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="registernow">Register Now</string>
    <string name="phone">Phone</string>
    <string name="otp">OTP</string>
    <string name="confirm">Confirm</string>
    <string name="find_doctor">Find Doctor</string>
    <string name="get_medicine">Get Medicine</string>
    <string name="nearest_doctor">Nearest Doctor</string>
    <string name="nearest_pharmacy">Nearest Pharmacy</string>
    <string name="Password">Password</string>
    <string name="doctor_list">Doctor List</string>
    <string name="buy_online">Buy Online</string>
    <string name="set_Password">Set Password</string>
    <string name="send">Send</string>
    <string name="continu">Continue</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_not_match">Password not matched</string>
    <string name="registration_successful">Registration Successful</string>
    <string name="reset_pass_successful">Password reset successful!</string>
    <string name="reset_pass">Reset Password</string>
    <string name="forget_pass">Forget Password</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="fPassword">Forgot Password?</string>
    <string name="or">Or,</string>
    <string name="profile">Profile</string>
    <string name="notification">Notifications</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="help">Help</string>
    <string name="payment">Payment</string>
    <string name="withdraw">Withdraw</string>
    <string name="edit">Edit</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="personal_info">Personal Information</string>
    <string name="contact_info">Contact Information</string>
    <string name="language">Language</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="full_address">Full Address</string>
    <string name="continue_shipping">Continue Shipping</string>
    <string name="congratulation">Congratulations</string>
    <string name="order_completed">Your order is completed \nPlease check your delivery status</string>
    <string name="phone_number">Phone Number</string>
    <string name="logout">Logout</string>
    <string name="call_now">Call Now</string>
    <string name="live_chat">Live Chat</string>
    <string name="contact_us">Contact Us</string>
    <string name="products">Products</string>
    <string name="your_refer_code">Your refer code</string>
    <string name="balance">Balance</string>
    <string name="copy">Copy</string>
    <string name="review">Review</string>
    <string name="transfer">Transfer</string>
    <string name="activated">Activated</string>
    <string name="has_registered">has registered with your code</string>
    <string name="get_now">Get Now</string>
    <string name="user_gift">User Gift</string>
    <string name="invite_earn">Invite and Earn</string>
    <string name="shopping_balance">Shopping Balance</string>
    <string name="categories">Categories</string>
    <string name="customer_care">Customer Care</string>
    <string name="see_more">See more</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="terms">I agree to the Privacy Policy and Terms &amp; conditions</string>
    <string name="money_return">30 Day Money Return</string>
    <string name="money_des">We want you to be satisfied, so all eligible courses purchased on Udemy can be refunded within 30 days. For whatever reason, if you are unhappy with a course, you can request a refund, provided the request meets the guidelines in our refund policy.</string>
    <!--    Intro Screen-->
    <string name="delivery">Free Delivery</string>
    <string name="delivery_des">Order grocery online with free home delivery, save money, save time.Place a qualifying order with OfficeDepot.com, and if you\'re in one of our many local delivery areas, your delivery will be FREE.</string>
    <string name="secure">Secure Payment</string>
    <string name="secure_des">Order grocery online with free home delivery, save money, save time.Place a qualifying order with OfficeDepot.com, and if you\'re in one of our many local delivery areas, your delivery will be FREE.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="follow">Following</string>
    <string name="recharge">Mobile Recharge</string>
    <string name="favourite">Favourites</string>
    <string name="topup">Top-Up</string>
    <string name="wallet">Simplelife Wallet</string>
    <string name="viewed">Viewed</string>
    <string name="generation">Generation</string>
    <string name="coupon">Coupons</string>
    <string name="ranking">Ranking</string>
    <string name="title_activity_maps">Map</string>

</resources>