<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:background="@color/blue_grey_100"
    tools:context=".activity.profile.ProfileActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue_grey_100"
        android:orientation="vertical">
        <include layout="@layout/toolbar_back"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/ic_top_splash">
            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/userImageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/user"/>
            <TextView
                android:id="@+id/changePhotoTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/userImageView"
                app:layout_constraintStart_toStartOf="@+id/userImageView"
                app:layout_constraintEnd_toEndOf="@+id/userImageView"
                android:textSize="@dimen/_17_sp"
                android:text="@string/change_photo"
                android:drawableRight="@drawable/ic_edit"
                android:drawablePadding="@dimen/_10_dp"
                android:layout_marginTop="@dimen/_10_dp"
                android:textColor="@color/white"/>
        </LinearLayout>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20_dp"
            app:cardCornerRadius="@dimen/_10_dp">
            <LinearLayout
                android:id="@+id/infoLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="@dimen/_10_dp"
                android:padding="@dimen/_20_dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/editProfileTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/personal_info"
                    android:textColor="@color/black"
                    android:fontFamily="@font/roboto_bold"
                    android:layout_marginBottom="@dimen/_20_dp"
                    android:textSize="@dimen/_14_sp"
                    android:drawableRight="@drawable/ic_edit_profile"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_name"
                    android:textColor="@color/grey_60"
                    android:textSize="@dimen/_12_sp"/>
                <TextView
                    android:id="@+id/firstNameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5_dp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14_sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_name"
                    android:textColor="@color/grey_60"
                    android:textSize="@dimen/_12_sp"
                    android:layout_marginTop="@dimen/_10_dp"/>
                <TextView
                    android:id="@+id/lastNameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5_dp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14_sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_number"
                    android:textColor="@color/grey_60"
                    android:textSize="@dimen/_12_sp"
                    android:layout_marginTop="@dimen/_10_dp"/>
                <TextView
                    android:id="@+id/mobileTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5_dp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14_sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/full_address"
                    android:textColor="@color/grey_60"
                    android:textSize="@dimen/_12_sp"
                    android:layout_marginTop="@dimen/_10_dp"/>
                <TextView
                    android:id="@+id/addressTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5_dp"
                    android:textColor="@color/black"
                    android:text="N/A"
                    android:textSize="@dimen/_14_sp"/>
                <TextView
                    android:id="@+id/headingDistanceTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blood_group"
                    android:textColor="@color/grey_60"
                    android:textSize="@dimen/_12_sp"
                    android:layout_marginTop="@dimen/_10_dp"/>
                <TextView
                    android:id="@+id/bloodGroupTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5_dp"
                    android:textColor="@color/black"
                    android:text="N/A"
                    android:textSize="@dimen/_14_sp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>