<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarThumbVertical="@null"
    android:fillViewport="true"
    android:background="@color/purple_action_bar"
    tools:context=".activity.auth.SignInActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageViewBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white"
            android:layout_marginLeft="20dp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewBack">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_logo_white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_20_sp"
                    android:layout_marginStart="@dimen/_10_dp"
                    android:fontFamily="@font/roboto_bold"/>
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/shape_sign_in_back"
                android:elevation="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/textInputPhone"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/shape_edittext_back"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:src="@drawable/ic_telephone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginLeft="10dp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        app:hintEnabled="false"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/imageView6"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginRight="10dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextPhone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/color_gray"
                            android:hint="@string/phone"
                            android:inputType="phone"
                            android:paddingStart="10dp"
                            android:paddingBottom="15dp"
                            android:textColor="@color/black"
                            android:textColorHint="@color/color_gray"
                            android:textSize="12sp"
                            android:paddingLeft="10dp" />
                    </com.google.android.material.textfield.TextInputLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
                <TextView
                    android:id="@+id/errorTextViewPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/textInputPhone"
                    app:layout_constraintBottom_toTopOf="@+id/textInputRefer"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textColor="@color/red_700"
                    android:visibility="gone"
                    android:textSize="@dimen/_12_sp"
                    android:layout_marginTop="@dimen/_5_dp"
                    android:layout_marginLeft="@dimen/_30_dp"
                    android:layout_marginRight="@dimen/_20_dp"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/textInputRefer"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/shape_edittext_back"
                    android:orientation="horizontal"
                    app:hintEnabled="false"
                    app:layout_constraintEnd_toEndOf="@+id/textInputPhone"
                    app:layout_constraintStart_toStartOf="@+id/textInputPhone"
                    app:layout_constraintTop_toBottomOf="@+id/errorTextViewPhone">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:src="@drawable/ic_padlock"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginLeft="10dp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        app:hintEnabled="false"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/imageView4"
                        app:layout_constraintTop_toTopOf="parent"
                        app:passwordToggleDrawable="@drawable/selector_toggole_btn"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/black"
                        android:layout_marginRight="10dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/color_gray"
                            android:drawableEnd="@drawable/selector_toggole_btn"
                            android:hint="@string/Password"
                            android:inputType="textPassword"
                            android:paddingStart="15dp"
                            android:textColor="@color/black"
                            android:textColorHint="@color/color_gray"
                            android:textSize="12sp"
                            android:paddingLeft="15dp"
                            android:drawableRight="@drawable/selector_toggole_btn" />
                    </com.google.android.material.textfield.TextInputLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
                <TextView
                    android:id="@+id/errorTextViewPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/textInputRefer"
                    app:layout_constraintBottom_toTopOf="@+id/textViewForgetPassword"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textColor="@color/red_700"
                    android:visibility="gone"
                    android:textSize="@dimen/_12_sp"
                    android:layout_marginTop="@dimen/_5_dp"
                    android:layout_marginLeft="@dimen/_30_dp"
                    android:layout_marginRight="@dimen/_20_dp"/>
                <TextView
                    android:id="@+id/textViewForgetPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/fPassword"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="@+id/textInputRefer"
                    app:layout_constraintTop_toBottomOf="@+id/errorTextViewPassword"
                    android:layout_marginRight="10dp" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardViewLogin"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="40dp"
                    android:text="@string/sign_in"
                    android:textAllCaps="false"
                    app:cardCornerRadius="30dp"
                    app:cardElevation="5dp"
                    app:layout_constraintEnd_toEndOf="@+id/textInputRefer"
                    app:layout_constraintStart_toStartOf="@+id/textInputRefer"
                    app:layout_constraintTop_toBottomOf="@+id/textViewForgetPassword"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="@dimen/_20_dp">

                    <LinearLayout
                        android:id="@+id/linearLayout_sign_in"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/ripple_cardview"
                        android:gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sign_in"
                            android:textStyle="bold"
                            android:textColor="@color/white"
                            android:textSize="16sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/layoutMoveToRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
                app:layout_constraintStart_toStartOf="@+id/constraintLayout"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

                <TextView
                    android:id="@+id/textView_have_not_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dont_have_account"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
                    app:layout_constraintHorizontal_bias="0.35"
                    app:layout_constraintStart_toStartOf="@+id/constraintLayout"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

                <TextView
                    android:id="@+id/textView_sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/registernow"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/textView_have_not_account"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
                    android:layout_marginLeft="5dp" />
            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>